# stock-open-std-est

./: .gitignore  README.md  config.py  data.py  evaluate.py  example_position_sizing.py  features.py  main.py  pipeline.py  pyproject.toml  results.csv  utils.py
docs/: code_structure.md  methods.md
models/: __init__.py  base.py  ewma.py  garch.py  har_rv.py  lasso.py  lightgbm.py  naive.py  premarket.py  random_forest.py  ridge.py  rolling_mean.py  xgboost.py
