[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "std_pred"
version = "0.1.0"
description = "Opening window volatility prediction — predicts 9:30-10:00 ET realized volatility from pre-market data"
requires-python = ">=3.10"
dependencies = [
    "tyro>=0.8.0",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "arch>=7.0",
    "rich>=13.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["models*"]

[tool.ruff]
line-length = 120
target-version = "py310"
